--- a/FilesIntegration/FilesIntegration.csproj
+++ b/FilesIntegration/FilesIntegration.csproj
@@ -152,14 +152,26 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801200731384_InitialCreate.cs" />
+    <Compile Include="Migrations\201801200731384_InitialCreate.Designer.cs">
+      <DependentUpon>201801200731384_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801200804567_AddOfTableForAttachedEmployees.cs" />
+    <Compile Include="Migrations\201801200804567_AddOfTableForAttachedEmployees.Designer.cs">
+      <DependentUpon>201801200804567_AddOfTableForAttachedEmployees.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CSVEmployeeData.cs" />
+    <Compile Include="Models\EmployeeAttachment.cs" />
     <Compile Include="Models\FilesIntegrationDb.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\CSVReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
+    <Content Include="Files\Csv\employee.csv.txt" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -194,7 +206,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\CSVManager\PushCsvIndex.cshtml" />
-    <Content Include="Views\CSVManager\PullCsv.cshtml" />
+    <Content Include="Views\CSVManager\PullCsvIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -213,6 +225,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201801200731384_InitialCreate.resx">
+      <DependentUpon>201801200731384_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801200804567_AddOfTableForAttachedEmployees.resx">
+      <DependentUpon>201801200804567_AddOfTableForAttachedEmployees.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
